--- a/index.css
+++ b/index.css
@@ -29,11 +29,7 @@
 .res-card {
     margin: 10px;
     padding: 5px;
-    border:  5px;
     width: 200px;
-    height: 300px;
-    border: 5px;
-
 }
 
 .res-container {
@@ -43,7 +39,7 @@
 
 .res-card:hover {
     cursor: pointer;
-    border: 2px solid peachpuff;
+    border: .5px solid black;
 }
 
 .res-card > .card-logo {
