--- a/index.css
+++ b/index.css
@@ -48,5 +48,13 @@
 
 .search {
     padding: 10px;
+}
 
+.filter_btn {
+    cursor: pointer;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: lightgrey;
+    border: 1px solid black;
 }
